스택이용한 후위연산자변환 연습

--- a/Algorithm(Python)/Basic_practice.ipynb
+++ b/Algorithm(Python)/Basic_practice.ipynb
@@ -1142,6 +1142,48 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 연습2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(S):\n",
+    "    opStack = ArrayStack()\n",
+    "    answer = ''\n",
+    "    # 문자열 S의 한 글자씩 loop\n",
+    "    for char in S:\n",
+    "        if char in prec:\n",
+    "            if opStack.isEmpty() or char == '(':\n",
+    "                opStack.push(char)\n",
+    "            elif prec[char] <= prec[opStack.peek()]:\n",
+    "                while prec[char] <= prec[opStack.peek()]:\n",
+    "                    answer += opStack.pop()\n",
+    "                    if opStack.isEmpty():\n",
+    "                        opStack.push(char)\n",
+    "                        break\n",
+    "            else:\n",
+    "                opStack.push(char)\n",
+    "        elif char == ')':\n",
+    "            while opStack.peek() != '(':\n",
+    "                answer += opStack.pop()\n",
+    "            # '('처리\n",
+    "            opStack.pop()\n",
+    "        else:\n",
+    "            answer += char\n",
+    "    # 스택에 데이터 남아있는지 최종 확인\n",
+    "    while not opStack.isEmpty():\n",
+    "        answer += opStack.pop()\n",
+    "    return answer"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1166,7 +1208,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.6"
   },
   "toc": {
    "base_numbering": 1,
