스택-후위표현수식 계산 구현

--- a/Algorithm(Python)/Basic_practice.ipynb
+++ b/Algorithm(Python)/Basic_practice.ipynb
@@ -1184,6 +1184,150 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 13강 - 스택응용 - 중위표현식->후위표현식->후위표현식 계산"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ArrayStack:\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        self.data = []\n",
+    "\n",
+    "    def size(self):\n",
+    "        return len(self.data)\n",
+    "\n",
+    "    def isEmpty(self):\n",
+    "        return self.size() == 0\n",
+    "\n",
+    "    def push(self, item):\n",
+    "        self.data.append(item)\n",
+    "\n",
+    "    def pop(self):\n",
+    "        return self.data.pop()\n",
+    "\n",
+    "    def peek(self):\n",
+    "        return self.data[-1]\n",
+    "\n",
+    "\n",
+    "def splitTokens(exprStr):\n",
+    "    tokens = []\n",
+    "    val = 0\n",
+    "    valProcessing = False\n",
+    "    for c in exprStr:\n",
+    "        if c == ' ':\n",
+    "            continue\n",
+    "        if c in '0123456789':\n",
+    "            val = val * 10 + int(c)\n",
+    "            valProcessing = True\n",
+    "        else:\n",
+    "            if valProcessing:\n",
+    "                tokens.append(val)\n",
+    "                val = 0\n",
+    "            valProcessing = False\n",
+    "            tokens.append(c)\n",
+    "    if valProcessing:\n",
+    "        tokens.append(val)\n",
+    "\n",
+    "    return tokens\n",
+    "\n",
+    "\n",
+    "def infixToPostfix(tokenList):\n",
+    "    prec = {\n",
+    "        '*': 3,\n",
+    "        '/': 3,\n",
+    "        '+': 2,\n",
+    "        '-': 2,\n",
+    "        '(': 1,\n",
+    "    }\n",
+    "    opStack = ArrayStack()\n",
+    "    postfixList = []\n",
+    "    # token 하나씩 loop\n",
+    "    for token in tokenList:\n",
+    "        # token이 prec안에 있을 때\n",
+    "        if token in prec:\n",
+    "            # 스택이 비어있거나 token='('일 때\n",
+    "            if opStack.isEmpty() or token == '(':\n",
+    "                opStack.push(token)\n",
+    "            # 마주친 연산자의 순위 <= 스택 상위의 연산자 순위\n",
+    "            elif prec[token] <= prec[opStack.peek()]:\n",
+    "                while prec[token] <= prec[opStack.peek()]:\n",
+    "                    postfixList.append(opStack.pop())\n",
+    "                    if opStack.isEmpty():\n",
+    "                        opStack.push(token)\n",
+    "                        break\n",
+    "            # 마주친 연산자의 순위 > 스택 상위의 연산자 순위\n",
+    "            else:\n",
+    "                opStack.push(token)\n",
+    "        # token = ')'일 때\n",
+    "        elif token == ')':\n",
+    "            # 스택 peek 데이터가 '('일 때까지 pop\n",
+    "            while opStack.peek() != '(':\n",
+    "                postfixList.append(opStack.pop())\n",
+    "            # '('연산자 pop처리\n",
+    "            opStack.pop()\n",
+    "        # token이 피연산자일 때 \n",
+    "        else:\n",
+    "            postfixList.append(token)\n",
+    "        # 스택이 비어있는지 확인\n",
+    "    while not opStack.isEmpty():\n",
+    "        postfixList.append(opStack.pop())\n",
+    "\n",
+    "    return postfixList\n",
+    "\n",
+    "\n",
+    "def postfixEval(tokenList):\n",
+    "    opStack = ArrayStack()\n",
+    "    prec = ['*','/','+','-']\n",
+    "    # token 하나씩 loop\n",
+    "    for token in tokenList:\n",
+    "        # token in prec\n",
+    "        if token in prec:\n",
+    "            # token == *\n",
+    "            if token == '*':\n",
+    "                two_peek = opStack.pop()\n",
+    "                one_peek = opStack.pop()\n",
+    "                result = one_peek * two_peek\n",
+    "                opStack.push(result)\n",
+    "            # token == +\n",
+    "            elif token == '+':\n",
+    "                two_peek = opStack.pop()\n",
+    "                one_peek = opStack.pop()\n",
+    "                result = one_peek + two_peek\n",
+    "                opStack.push(result)\n",
+    "            # token == -\n",
+    "            elif token == '-':\n",
+    "                two_peek = opStack.pop()\n",
+    "                one_peek = opStack.pop()\n",
+    "                result = one_peek - two_peek\n",
+    "                opStack.push(result)\n",
+    "            # token == /\n",
+    "            else:\n",
+    "                two_peek = opStack.pop()\n",
+    "                one_peek = opStack.pop()\n",
+    "                result = one_peek / two_peek\n",
+    "                opStack.push(result)\n",
+    "        # token이 숫자일 때, 스택에 push\n",
+    "        else:\n",
+    "            opStack.push(token)\n",
+    "    if opStack.size() == 1:\n",
+    "        return opStack.pop()\n",
+    "\n",
+    "def solution(expr):\n",
+    "    tokens = splitTokens(expr)\n",
+    "    postfix = infixToPostfix(tokens)\n",
+    "    val = postfixEval(postfix)\n",
+    "    return val"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
