%연산자 이용해 환형 큐 구현

--- a/Algorithm(Python)/Basic_practice.ipynb
+++ b/Algorithm(Python)/Basic_practice.ipynb
@@ -1328,6 +1328,66 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 15강 - 환형 큐 구현\n",
+    "\n",
+    "- ``%`` : ex) 1 % 4 = 1(``나머지``)\n",
+    "- ``%``를 이용해서 끝 인덱스를 만나면 처음 인덱스로 돌아가는 기능 구현 가능!!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CircularQueue:\n",
+    "\n",
+    "    def __init__(self, n):\n",
+    "        self.maxCount = n\n",
+    "        self.data = [None] * n\n",
+    "        self.count = 0\n",
+    "        self.front = -1\n",
+    "        self.rear = -1\n",
+    "\n",
+    "\n",
+    "    def size(self):\n",
+    "        return self.count\n",
+    "\n",
+    "    def isEmpty(self):\n",
+    "        return self.count == 0\n",
+    "\n",
+    "    def isFull(self):\n",
+    "        return self.count == self.maxCount\n",
+    "\n",
+    "    def enqueue(self, x):\n",
+    "        if self.isFull():\n",
+    "            raise IndexError('Queue full')\n",
+    "        self.rear = (self.rear+1)%self.maxCount\n",
+    "        self.data[self.rear] = x\n",
+    "        self.count += 1\n",
+    "\n",
+    "    def dequeue(self):\n",
+    "        if self.isEmpty():\n",
+    "            raise IndexError('Queue empty')\n",
+    "        self.front = (self.front+1)%self.maxCount\n",
+    "        x = self.data[self.front]\n",
+    "        self.count -= 1\n",
+    "        return x\n",
+    "\n",
+    "    def peek(self):\n",
+    "        if self.isEmpty():\n",
+    "            raise IndexError('Queue empty')\n",
+    "        return self.data[(self.front+1)%self.maxCount]\n",
+    "\n",
+    "\n",
+    "def solution(x):\n",
+    "    return 0"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
