환형큐 lambda로 구현&lambda의 다양한 문법

--- a/Algorithm(Python)/Basic_practice.ipynb
+++ b/Algorithm(Python)/Basic_practice.ipynb
@@ -1388,6 +1388,63 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "``lambda`` 이용한 구현"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CircularQueue:\n",
+    "\n",
+    "    def __init__(self, n):\n",
+    "        self.maxCount = n\n",
+    "        self.data = [None] * n\n",
+    "        self.count = 0\n",
+    "        self.front = -1\n",
+    "        self.rear = -1\n",
+    "\n",
+    "\n",
+    "    def size(self):\n",
+    "        return self.count\n",
+    "\n",
+    "    def isEmpty(self):\n",
+    "        return self.count == 0\n",
+    "\n",
+    "    def isFull(self):\n",
+    "        return self.count == self.maxCount\n",
+    "\n",
+    "    def enqueue(self, x):\n",
+    "        if self.isFull():\n",
+    "            raise IndexError('Queue full')\n",
+    "        self.rear = (lambda z: 0 if z+1 > self.maxCount-1 else z+1)(self.rear)\n",
+    "        self.data[self.rear] = x\n",
+    "        self.count += 1\n",
+    "\n",
+    "    def dequeue(self):\n",
+    "        if self.isEmpty():\n",
+    "            raise IndexError('Queue empty')\n",
+    "        self.front = (lambda z: 0 if z+1 > self.maxCount-1 else z+1)(self.front)\n",
+    "        x = self.data[self.front]\n",
+    "        self.count -= 1\n",
+    "        return x\n",
+    "\n",
+    "    def peek(self):\n",
+    "        if self.isEmpty():\n",
+    "            raise IndexError('Queue empty')\n",
+    "        return self.data[(lambda z: 0 if z+1 > self.maxCount-1 else z+1)(self.front)]\n",
+    "\n",
+    "\n",
+    "def solution(x):\n",
+    "    return 0"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
