우선순위 큐 구현

--- a/Algorithm(Python)/Basic_practice.ipynb
+++ b/Algorithm(Python)/Basic_practice.ipynb
@@ -1445,11 +1445,169 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 16강 - 우선순위 큐 연산 구현\n",
+    "\n",
+    "- 반복.."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Node:\n",
+    "\n",
+    "    def __init__(self, item):\n",
+    "        self.data = item\n",
+    "        self.prev = None\n",
+    "        self.next = None\n",
+    "\n",
+    "\n",
+    "class DoublyLinkedList:\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        self.nodeCount = 0\n",
+    "        self.head = Node(None)\n",
+    "        self.tail = Node(None)\n",
+    "        self.head.prev = None\n",
+    "        self.head.next = self.tail\n",
+    "        self.tail.prev = self.head\n",
+    "        self.tail.next = None\n",
+    "\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        if self.nodeCount == 0:\n",
+    "            return 'LinkedList: empty'\n",
+    "\n",
+    "        s = ''\n",
+    "        curr = self.head\n",
+    "        while curr.next.next:\n",
+    "            curr = curr.next\n",
+    "            s += repr(curr.data)\n",
+    "            if curr.next.next is not None:\n",
+    "                s += ' -> '\n",
+    "        return s\n",
+    "\n",
+    "\n",
+    "    def getLength(self):\n",
+    "        return self.nodeCount\n",
+    "\n",
+    "\n",
+    "    def traverse(self):\n",
+    "        result = []\n",
+    "        curr = self.head\n",
+    "        while curr.next.next:\n",
+    "            curr = curr.next\n",
+    "            result.append(curr.data)\n",
+    "        return result\n",
+    "\n",
+    "\n",
+    "    def reverse(self):\n",
+    "        result = []\n",
+    "        curr = self.tail\n",
+    "        while curr.prev.prev:\n",
+    "            curr = curr.prev\n",
+    "            result.append(curr.data)\n",
+    "        return result\n",
+    "\n",
+    "\n",
+    "    def getAt(self, pos):\n",
+    "        if pos < 0 or pos > self.nodeCount:\n",
+    "            return None\n",
+    "\n",
+    "        if pos > self.nodeCount // 2:\n",
+    "            i = 0\n",
+    "            curr = self.tail\n",
+    "            while i < self.nodeCount - pos + 1:\n",
+    "                curr = curr.prev\n",
+    "                i += 1\n",
+    "        else:\n",
+    "            i = 0\n",
+    "            curr = self.head\n",
+    "            while i < pos:\n",
+    "                curr = curr.next\n",
+    "                i += 1\n",
+    "\n",
+    "        return curr\n",
+    "\n",
+    "\n",
+    "    def insertAfter(self, prev, newNode):\n",
+    "        next = prev.next\n",
+    "        newNode.prev = prev\n",
+    "        newNode.next = next\n",
+    "        prev.next = newNode\n",
+    "        next.prev = newNode\n",
+    "        self.nodeCount += 1\n",
+    "        return True\n",
+    "\n",
+    "\n",
+    "    def insertAt(self, pos, newNode):\n",
+    "        if pos < 1 or pos > self.nodeCount + 1:\n",
+    "            return False\n",
+    "\n",
+    "        prev = self.getAt(pos - 1)\n",
+    "        return self.insertAfter(prev, newNode)\n",
+    "\n",
+    "\n",
+    "    def popAfter(self, prev):\n",
+    "        curr = prev.next\n",
+    "        next = curr.next\n",
+    "        prev.next = next\n",
+    "        next.prev = prev\n",
+    "        self.nodeCount -= 1\n",
+    "        return curr.data\n",
+    "\n",
+    "\n",
+    "    def popAt(self, pos):\n",
+    "        if pos < 1 or pos > self.nodeCount:\n",
+    "            return None\n",
+    "\n",
+    "        prev = self.getAt(pos - 1)\n",
+    "        return self.popAfter(prev)\n",
+    "\n",
+    "\n",
+    "    def concat(self, L):\n",
+    "        self.tail.prev.next = L.head.next\n",
+    "        L.head.next.prev = self.tail.prev\n",
+    "        self.tail = L.tail\n",
+    "\n",
+    "        self.nodeCount += L.nodeCount\n",
+    "\n",
+    "\n",
+    "class PriorityQueue:\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        self.queue = DoublyLinkedList()\n",
+    "\n",
+    "\n",
+    "    def size(self):\n",
+    "        return self.queue.getLength()\n",
+    "\n",
+    "    def isEmpty(self):\n",
+    "        return self.size() == 0\n",
+    "\n",
+    "    def enqueue(self, x):\n",
+    "        newNode = Node(x)\n",
+    "        curr = self.queue.head\n",
+    "        while curr.next.data != None and x < curr.next.data:\n",
+    "            curr = curr.next\n",
+    "        # insetAt은 사용 부적절. 왜냐하면 그 사잇값에 넣을려면 런타임에러\n",
+    "        return self.queue.insertAfter(curr, newNode)\n",
+    "        \n",
+    "    def dequeue(self):\n",
+    "        return self.queue.popAt(self.queue.getLength())\n",
+    "\n",
+    "    def peek(self):\n",
+    "        return self.queue.getAt(self.queue.getLength()).data\n",
+    "\n",
+    "\n",
+    "def solution(x):\n",
+    "    return 0"
+   ]
   }
  ],
  "metadata": {
