이진트리-중위,전위,후위 순회

--- a/Algorithm(Python)/Basic_practice.ipynb
+++ b/Algorithm(Python)/Basic_practice.ipynb
@@ -1608,6 +1608,129 @@
     "def solution(x):\n",
     "    return 0"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 18강 - 이진트리\n",
+    "## 이진트리의 size(), depth() 구하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Node:\n",
+    "    def __init__(self, item):\n",
+    "        self.data = item\n",
+    "        self.left = None\n",
+    "        self.right = None\n",
+    "\n",
+    "    def size(self):\n",
+    "        l = self.left.size() if self.left else 0\n",
+    "        r = self.right.size() if self.right else 0\n",
+    "        return l + r + 1\n",
+    "\n",
+    "    def depth(self):\n",
+    "        l_depth = self.left.depth() if self.left else 0\n",
+    "        r_depth = self.right.depth() if self.right else 0 \n",
+    "        if l_depth > r_depth:\n",
+    "            return l_depth + 1\n",
+    "        else:\n",
+    "            return r_depth + 1\n",
+    "\n",
+    "class BinaryTree:\n",
+    "\n",
+    "    def __init__(self, r):\n",
+    "        self.root = r\n",
+    "\n",
+    "    def size(self):\n",
+    "        if self.root:\n",
+    "            return self.root.size()\n",
+    "        else:\n",
+    "            return 0\n",
+    "\n",
+    "    def depth(self):\n",
+    "        if self.root:\n",
+    "            return self.root.depth()\n",
+    "        else:\n",
+    "            return 0 \n",
+    "\n",
+    "def solution(x):\n",
+    "    return 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 이진트리 중위, 전위, 후위 순회"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Node:\n",
+    "    def __init__(self, item):\n",
+    "        self.data = item\n",
+    "        self.left = None\n",
+    "        self.right = None\n",
+    "\n",
+    "    def inorder(self):\n",
+    "        traversal = []\n",
+    "        if self.left:\n",
+    "            traversal += self.left.inorder()\n",
+    "        traversal.append(self.data)\n",
+    "        if self.right:\n",
+    "            traversal += self.right.inorder()\n",
+    "        return traversal\n",
+    "    \n",
+    "    def preorder(self):\n",
+    "        traversal = []\n",
+    "        traversal.append(self.data)\n",
+    "        if self.left:\n",
+    "            traversal += self.left.preorder()\n",
+    "        if self.right:\n",
+    "            traversal += self.right.preorder()\n",
+    "        return traversal\n",
+    "\n",
+    "    def postorder(self):\n",
+    "        traversal = []\n",
+    "        if self.left:\n",
+    "            traversal += self.left.postorder()\n",
+    "        if self.right:\n",
+    "            traversal += self.right.postorder()\n",
+    "        traversal.append(self.data)\n",
+    "        return traversal\n",
+    "\n",
+    "class BinaryTree:\n",
+    "    def __init__(self, r):\n",
+    "        self.root = r\n",
+    "\n",
+    "    def inorder(self):\n",
+    "        if self.root:\n",
+    "            return self.root.inorder()\n",
+    "        else:\n",
+    "            return []\n",
+    "\n",
+    "    def preorder(self):\n",
+    "        if self\n",
+    "        \n",
+    "    def postorder(self):\n",
+    "        if self.root:\n",
+    "            return self.root.postorder()\n",
+    "        else:\n",
+    "            return []\n",
+    "\n",
+    "def solution(x):\n",
+    "    return 0"
+   ]
   }
  ],
  "metadata": {
@@ -1627,7 +1750,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   },
   "toc": {
    "base_numbering": 1,
