이진트리 넓이우선순회

--- a/Algorithm(Python)/Basic_practice.ipynb
+++ b/Algorithm(Python)/Basic_practice.ipynb
@@ -1731,6 +1731,157 @@
     "def solution(x):\n",
     "    return 0"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 19강 - 이진트리 넓이 우선순회"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 내가 한 풀이"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ArrayQueue:\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        self.data = []\n",
+    "\n",
+    "    def size(self):\n",
+    "        return len(self.data)\n",
+    "\n",
+    "    def isEmpty(self):\n",
+    "        return self.size() == 0\n",
+    "\n",
+    "    def enqueue(self, item):\n",
+    "        self.data.append(item)\n",
+    "\n",
+    "    def dequeue(self):\n",
+    "        return self.data.pop(0)\n",
+    "\n",
+    "    def peek(self):\n",
+    "        return self.data[0]\n",
+    "\n",
+    "class Node:\n",
+    "\n",
+    "    def __init__(self, item):\n",
+    "        self.data = item\n",
+    "        self.left = None\n",
+    "        self.right = None\n",
+    "\n",
+    "class BinaryTree:\n",
+    "\n",
+    "    def __init__(self, r):\n",
+    "        self.root = r\n",
+    "\n",
+    "    def bft(self):\n",
+    "        traversal = []\n",
+    "        q = ArrayQueue()\n",
+    "        # 이진트리가 비어있지 않는 경우\n",
+    "        if self.root:\n",
+    "            # 맨 상위의 root를 q에 인큐\n",
+    "            q.enqueue(self.root)\n",
+    "            # q에 노드가 없을 때까지 무한 loop\n",
+    "            while not q.isEmpty():\n",
+    "                # 가장 상위의 root 노드를 첨가\n",
+    "                node = q.dequeue()\n",
+    "                traversal.append(node.data)\n",
+    "                if node.left:\n",
+    "                    q.enqueue(node.left)\n",
+    "                if node.right:\n",
+    "                    q.enqueue(node.right)\n",
+    "            return traversal\n",
+    "        # 이진트리가 비어있는 경우\n",
+    "        else:\n",
+    "            return []\n",
+    "\n",
+    "def solution(x):\n",
+    "    return 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 남이 한 풀이 : 어차피 빈 이진트리면 빈 리스트를 반환하니까 굳이 ``else구문`` 넣지 않아도 됨!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ArrayQueue:\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        self.data = []\n",
+    "\n",
+    "    def size(self):\n",
+    "        return len(self.data)\n",
+    "\n",
+    "    def isEmpty(self):\n",
+    "        return self.size() == 0\n",
+    "\n",
+    "    def enqueue(self, item):\n",
+    "        self.data.append(item)\n",
+    "\n",
+    "    def dequeue(self):\n",
+    "        return self.data.pop(0)\n",
+    "\n",
+    "    def peek(self):\n",
+    "        return self.data[0]\n",
+    "\n",
+    "class Node:\n",
+    "\n",
+    "    def __init__(self, item):\n",
+    "        self.data = item\n",
+    "        self.left = None\n",
+    "        self.right = None\n",
+    "\n",
+    "class BinaryTree:\n",
+    "\n",
+    "    def __init__(self, r):\n",
+    "        self.root = r\n",
+    "\n",
+    "    def bft(self):\n",
+    "        traversal = []\n",
+    "        q = ArrayQueue()\n",
+    "        # 이진트리가 비어있지 않는 경우\n",
+    "        if self.root:\n",
+    "            # 맨 상위의 root를 q에 인큐\n",
+    "            q.enqueue(self.root)\n",
+    "            # q에 노드가 없을 때까지 무한 loop\n",
+    "            while not q.isEmpty():\n",
+    "                # 가장 상위의 root 노드를 첨가\n",
+    "                node = q.dequeue()\n",
+    "                traversal.append(node.data)\n",
+    "                if node.left:\n",
+    "                    q.enqueue(node.left)\n",
+    "                if node.right:\n",
+    "                    q.enqueue(node.right)\n",
+    "            #return traversal =>안되는 이유: 빈 이진트리일 경우를 포함시키지 못함!\n",
+    "        return traversal\n",
+    "def solution(x):\n",
+    "    return 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
