이진탐색 트리 원소 삽입 구현

--- a/Algorithm(Python)/Basic_practice.ipynb
+++ b/Algorithm(Python)/Basic_practice.ipynb
@@ -1877,6 +1877,76 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 20강 - 이진탐색 트리 원소 삽입"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Node:\n",
+    "    def __init__(self, key, data):\n",
+    "        self.key = key\n",
+    "        self.data = data\n",
+    "        self.left = None\n",
+    "        self.right = None\n",
+    "\n",
+    "    def insert(self, key, data):\n",
+    "        # 새로운 key가 기존 key보다 작을 때\n",
+    "        if key < self.key:\n",
+    "            # 그리고 기존 key의 left가 있을 때 => !!!!!!self의 left노드에 가서 insert를 수행해야해!!!!!!!\n",
+    "            if self.left:\n",
+    "                self.left.insert(key, data)\n",
+    "            else:\n",
+    "                self.left = Node(key, data)\n",
+    "        # 새로운 key가 기존 key보다 클 때\n",
+    "        elif key > self.key:\n",
+    "            # 그리고 기존 key의 right가 있을 때 => !!!!!!self의 left노드에 가서 insert를 수행해야해!!!!!!!\n",
+    "            if self.right:\n",
+    "                self.right.insert(key, data)\n",
+    "            else:\n",
+    "                self.right = Node(key, data)\n",
+    "        # 새로운 key == 기존 key\n",
+    "        else:\n",
+    "            raise KeyError(\"Duplicate key is already existed\")\n",
+    "                \n",
+    "\n",
+    "    def inorder(self):\n",
+    "        traversal = []\n",
+    "        if self.left:\n",
+    "            traversal += self.left.inorder()\n",
+    "        traversal.append(self)\n",
+    "        if self.right:\n",
+    "            traversal += self.right.inorder()\n",
+    "        return traversal\n",
+    "\n",
+    "class BinSearchTree:\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        self.root = None\n",
+    "\n",
+    "    def insert(self, key, data):\n",
+    "        if self.root:\n",
+    "            self.root.insert(key, data)\n",
+    "        else:\n",
+    "            self.root = Node(key, data)\n",
+    "\n",
+    "    def inorder(self):\n",
+    "        if self.root:\n",
+    "            return self.root.inorder()\n",
+    "        else:\n",
+    "            return []\n",
+    "\n",
+    "def solution(x):\n",
+    "    return 0"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1901,7 +1971,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.6"
   },
   "toc": {
    "base_numbering": 1,
