이진탐색트리 삭제구현

--- a/Algorithm(Python)/Basic_practice.ipynb
+++ b/Algorithm(Python)/Basic_practice.ipynb
@@ -1947,6 +1947,179 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 21강 - 이진 탐색 트리 삭제 구현"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Node:\n",
+    "\n",
+    "    def __init__(self, key, data):\n",
+    "        self.key = key\n",
+    "        self.data = data\n",
+    "        self.left = None\n",
+    "        self.right = None\n",
+    "\n",
+    "\n",
+    "    def insert(self, key, data):\n",
+    "        if key < self.key:\n",
+    "            if self.left:\n",
+    "                self.left.insert(key, data)\n",
+    "            else:\n",
+    "                self.left = Node(key, data)\n",
+    "        elif key > self.key:\n",
+    "            if self.right:\n",
+    "                self.right.insert(key, data)\n",
+    "            else:\n",
+    "                self.right = Node(key, data)\n",
+    "        else:\n",
+    "            raise KeyError('Key %s already exists.' % key)\n",
+    "\n",
+    "\n",
+    "    def lookup(self, key, parent=None):\n",
+    "        if key < self.key:\n",
+    "            if self.left:\n",
+    "                return self.left.lookup(key, self)\n",
+    "            else:\n",
+    "                return None, None\n",
+    "        elif key > self.key:\n",
+    "            if self.right:\n",
+    "                return self.right.lookup(key, self)\n",
+    "            else:\n",
+    "                return None, None\n",
+    "        else:\n",
+    "            return self, parent\n",
+    "\n",
+    "\n",
+    "    def inorder(self):\n",
+    "        traversal = []\n",
+    "        if self.left:\n",
+    "            traversal += self.left.inorder()\n",
+    "        traversal.append(self)\n",
+    "        if self.right:\n",
+    "            traversal += self.right.inorder()\n",
+    "        return traversal\n",
+    "\n",
+    "\n",
+    "    def countChildren(self):\n",
+    "        count = 0\n",
+    "        if self.left:\n",
+    "            count += 1\n",
+    "        if self.right:\n",
+    "            count += 1\n",
+    "        return count\n",
+    "\n",
+    "\n",
+    "class BinSearchTree:\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        self.root = None\n",
+    "\n",
+    "\n",
+    "    def insert(self, key, data):\n",
+    "        if self.root:\n",
+    "            self.root.insert(key, data)\n",
+    "        else:\n",
+    "            self.root = Node(key, data)\n",
+    "\n",
+    "\n",
+    "    def lookup(self, key):\n",
+    "        if self.root:\n",
+    "            return self.root.lookup(key)\n",
+    "        else:\n",
+    "            return None, None\n",
+    "\n",
+    "\n",
+    "    def remove(self, key):\n",
+    "        node, parent = self.lookup(key)\n",
+    "        if node:\n",
+    "            nChildren = node.countChildren()\n",
+    "            # The simplest case of no children\n",
+    "            if nChildren == 0:\n",
+    "                # 만약 parent 가 있으면\n",
+    "                # node 가 왼쪽 자식인지 오른쪽 자식인지 판단하여\n",
+    "                # parent.left 또는 parent.right 를 None 으로 하여\n",
+    "                # leaf node 였던 자식을 트리에서 끊어내어 없앱니다.\n",
+    "                if parent:\n",
+    "                    if parent.left == node:\n",
+    "                        parent.left = None\n",
+    "                    else:\n",
+    "                        parent.right = None\n",
+    "                # 만약 parent 가 없으면 (node 는 root 인 경우)\n",
+    "                # self.root 를 None 으로 하여 빈 트리로 만듭니다.\n",
+    "                else:\n",
+    "                    self.root = None\n",
+    "            # When the node has only one child\n",
+    "            elif nChildren == 1:\n",
+    "                # 하나 있는 자식이 왼쪽인지 오른쪽인지를 판단하여\n",
+    "                # 그 자식을 어떤 변수가 가리키도록 합니다.\n",
+    "                if node.left:\n",
+    "                    c_node = node.left\n",
+    "                else:\n",
+    "                    c_node = node.right\n",
+    "                # 만약 parent 가 있으면\n",
+    "                # node 가 왼쪽 자식인지 오른쪽 자식인지 판단하여\n",
+    "                # 위에서 가리킨 자식을 대신 node 의 자리에 넣습니다.\n",
+    "                ### !!! 삭제할 node에 새로운 변수를 대입한다고 해서 노드가 대체되는 것이 아님 !!! ###\n",
+    "                if parent:\n",
+    "                    if parent.left == node:\n",
+    "                        parent.left = c_node\n",
+    "                    else:\n",
+    "                        parent.right = c_node\n",
+    "                # 만약 parent 가 없으면 (node 는 root 인 경우)\n",
+    "                # self.root 에 위에서 가리킨 자식을 대신 넣습니다.\n",
+    "                else:\n",
+    "                    self.root = c_node\n",
+    "            # When the node has both left and right children\n",
+    "            else:\n",
+    "                parent = node\n",
+    "                successor = node.right\n",
+    "                # parent 는 node 를 가리키고 있고,\n",
+    "                # successor 는 node 의 오른쪽 자식을 가리키고 있으므로\n",
+    "                # successor 로부터 왼쪽 자식의 링크를 반복하여 따라감으로써\n",
+    "                # 순환문이 종료할 때 successor 는 바로 다음 키를 가진 노드를,\n",
+    "                # 그리고 parent 는 그 노드의 부모 노드를 가리키도록 찾아냅니다.\n",
+    "                while successor.left:\n",
+    "                    parent = successor # => while문 바깥에 _, parent = self.lookup(successor.key)를 사용해도 되는가?런타임!?\n",
+    "                    successor = successor.left\n",
+    "                # 삭제하려는 노드인 node 에 successor 의 key 와 data 를 대입합니다.\n",
+    "                node.key = successor.key\n",
+    "                node.data = successor.data\n",
+    "                # 이제, successor 가 parent 의 왼쪽 자식인지 오른쪽 자식인지를 판단하여\n",
+    "                # 그에 따라 parent.left 또는 parent.right 를\n",
+    "                # successor 가 가지고 있던 (없을 수도 있지만) 자식을 가리키도록 합니다.\n",
+    "                # successor.left가 없을 수 밖에없음. 있었다면 successor.left가 또 다른 successor가 되었음!\n",
+    "                if parent.left == successor:\n",
+    "                    parent.left = successor.right\n",
+    "                #### !!!! 삭제할 노드가 두 child를 갖는 Root node일때 Case !!!! ####\n",
+    "                else:\n",
+    "                    parent.right = successor.right\n",
+    "\n",
+    "            return True\n",
+    "\n",
+    "        else:\n",
+    "            return False\n",
+    "\n",
+    "\n",
+    "    def inorder(self):\n",
+    "        if self.root:\n",
+    "            return self.root.inorder()\n",
+    "        else:\n",
+    "            return []\n",
+    "\n",
+    "\n",
+    "def solution(x):\n",
+    "    return 0"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
