Max heap insert 구현

--- a/Algorithm(Python)/Basic_practice.ipynb
+++ b/Algorithm(Python)/Basic_practice.ipynb
@@ -2120,6 +2120,76 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 22강 - Max 힙(Heap) 원소 삽입 구현"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 내가 한 풀이\n",
+    "class MaxHeap:\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        self.data = [None]\n",
+    "\n",
+    "\n",
+    "    def insert(self, item):\n",
+    "        # 배열 마지막에 삽입할 노드 append\n",
+    "        self.data.append(item)\n",
+    "        ## 삽입한 노드의 key가 부모노드의 key와 대소비교 ##\n",
+    "        # 삽입한 노드의 index 찾기\n",
+    "        item_idx = self.data.index(item) \n",
+    "        while self.data[item_idx // 2] is not None: \n",
+    "            # 부모 index = 삽입 노드 번호 // 2\n",
+    "            parent_idx = item_idx // 2\n",
+    "            if self.data[item_idx] > self.data[parent_idx]:\n",
+    "                self.data[parent_idx], self.data[item_idx] = item, self.data[parent_idx]\n",
+    "                item_idx = parent_idx\n",
+    "            else:\n",
+    "                break\n",
+    "        return self.data\n",
+    "        \n",
+    "def solution(x):\n",
+    "    return 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 남이 한 풀이\n",
+    "class MaxHeap:\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        self.data = [None]\n",
+    "\n",
+    "\n",
+    "    def insert(self, item):\n",
+    "        self.data.append(item)\n",
+    "        i = len(self.data)-1 # Last index  어차피 삽입되는 노드 마지막 인덱스니까 len(self.data)-1 로 나타내도 됨!\n",
+    "        while i>1: # root로 올때까지 부모와 비교하며 더 작으면 바꿔주고 반복한다.\n",
+    "            parent = self.data.index(item)//2 \n",
+    "            if self.data[i] > self.data[parent]: \n",
+    "                self.data[i], self.data[parent] = self.data[parent], self.data[i]\n",
+    "                i = parent\n",
+    "\n",
+    "            else: # 만약 부모가 더 작으면 거기서 끝.\n",
+    "                break\n",
+    "\n",
+    "\n",
+    "def solution(x):\n",
+    "    return 0"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
