--- a/Algorithm(Python)/Basic_practice.ipynb
+++ b/Algorithm(Python)/Basic_practice.ipynb
@@ -2190,6 +2190,62 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 23강(끝) - Max 힙(Heap) 요소 삭제 구현\n",
+    "\n",
+    "- 최대 힙 삭제는 특정 요소를 삭제할 수는 없고 ``최대값 요소가 들어있는 노드``를 삭제하는 구현만 가능"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MaxHeap:\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        self.data = [None]\n",
+    "\n",
+    "    def remove(self):\n",
+    "        if len(self.data) > 1:\n",
+    "            self.data[1], self.data[-1] = self.data[-1], self.data[1]\n",
+    "            data = self.data.pop(-1)\n",
+    "            self.maxHeapify(1)\n",
+    "        else:\n",
+    "            data = None\n",
+    "        return data\n",
+    "\n",
+    "    def maxHeapify(self, i):\n",
+    "        # 왼쪽 자식 (left child) 의 인덱스를 계산합니다.\n",
+    "        left = 2*i\n",
+    "\n",
+    "        # 오른쪽 자식 (right child) 의 인덱스를 계산합니다.\n",
+    "        right = 2*i + 1\n",
+    "\n",
+    "        smallest = i\n",
+    "        # 왼쪽 자식이 존재하는지, 그리고 왼쪽 자식의 (키) 값이 (무엇보다?) 더 큰지를 판단합니다.\n",
+    "        if left < len(self.data) and self.data[left] > self.data[i]:\n",
+    "            # 조건이 만족하는 경우, smallest 는 왼쪽 자식의 인덱스를 가집니다.\n",
+    "            smallest = left\n",
+    "            # 오른쪽 자식이 존재하는지, 그리고 오른쪽 자식의 (키) 값이 (무엇보다?) 더 큰지를 판단합니다.\n",
+    "        if right < len(self.data) and self.data[right] > self.data[left]:\n",
+    "            # 조건이 만족하는 경우, smallest 는 오른쪽 자식의 인덱스를 가집니다.     \n",
+    "            smallest = right\n",
+    "\n",
+    "        if smallest != i:\n",
+    "            # 현재 노드 (인덱스 i) 와 최댓값 노드 (왼쪽 아니면 오른쪽 자식) 를 교체합니다.  \n",
+    "            self.data[i], self.data[smallest] = self.data[smallest], self.data[i]\n",
+    "            # 재귀적 호출을 이용하여 최대 힙의 성질을 만족할 때까지 트리를 정리합니다.\n",
+    "            self.maxHeapify(smallest)\n",
+    "\n",
+    "def solution(x):\n",
+    "    return 0"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
