못푼문제 오답

--- a/Algorithm(Python)/CodeUp_note.ipynb
+++ b/Algorithm(Python)/CodeUp_note.ipynb
@@ -257,6 +257,134 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1097 문제"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m = []\n",
+    "# 0으로 모두 채워진 19*19 초기화된 바둑판 생성\n",
+    "for i in range(20):\n",
+    "    m.append([])\n",
+    "    for j in range(20):\n",
+    "        m[i].append(0)\n",
+    "        \n",
+    "# 현재상태의 바둑판 19*19 값들을 loop를 통해서 초기화된 바둑판에 입력\n",
+    "for i in range(19):\n",
+    "    a = input().split() # 공백을 기준으로 19줄 입력된것을 공백 기준으로 split해서 list에 담기\n",
+    "    for j in range(19):\n",
+    "        m[i+1][j+1] = int(a[j]) # 초기화된 바둑판에 특정 위치에 해당하는 값을 입력\n",
+    "        \n",
+    "# 십자 뒤집기(1->0, 0->1)할 횟수 입력\n",
+    "n = int(input())\n",
+    "\n",
+    "# 십자 뒤집기 적용할 좌표(몇 행, 몇 열인지..) n개수만큼 입력\n",
+    "for i in range(n):\n",
+    "    xy = list(map(int, input().split())) # 공백으로 구분되서 문자열 하나씩으로 할당됨\n",
+    "    x, y = xy[0], xy[1]\n",
+    "    for j in range(1, 20): # \n",
+    "        # 만약 1~19번째 행에 대하여 입력된 y좌표(열)에 값이 0이라면 1로 변경!\n",
+    "        if m[j][y] == 0:\n",
+    "            m[j][y] = 1\n",
+    "        else:\n",
+    "            m[j][y] = 0\n",
+    "        \n",
+    "        # 만약 1~19번째 열에 대하여 입력된 x좌표(행)에 값이 0이라면 1로 변경!\n",
+    "        if m[x][j] == 0:\n",
+    "            m[x][j] = 1\n",
+    "        else:\n",
+    "            m[x][j] = 0\n",
+    "\n",
+    "# 십자바꾸기를 한 2차원 리스트를 문자열로 변환\n",
+    "for i in range(1, 20):\n",
+    "    for j in range(1, 20):\n",
+    "        print(m[i][j], end=' ')\n",
+    "    print()    \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1098 문제"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20 10\n",
+      "1\n",
+      "20 1 1 6\n",
+      "0 0 0 0 0 1 0 0 0 0 \n",
+      "0 0 0 0 0 1 0 0 0 0 \n",
+      "0 0 0 0 0 1 0 0 0 0 \n",
+      "0 0 0 0 0 1 0 0 0 0 \n",
+      "0 0 0 0 0 1 0 0 0 0 \n",
+      "0 0 0 0 0 1 0 0 0 0 \n",
+      "0 0 0 0 0 1 0 0 0 0 \n",
+      "0 0 0 0 0 1 0 0 0 0 \n",
+      "0 0 0 0 0 1 0 0 0 0 \n",
+      "0 0 0 0 0 1 0 0 0 0 \n",
+      "0 0 0 0 0 1 0 0 0 0 \n",
+      "0 0 0 0 0 1 0 0 0 0 \n",
+      "0 0 0 0 0 1 0 0 0 0 \n",
+      "0 0 0 0 0 1 0 0 0 0 \n",
+      "0 0 0 0 0 1 0 0 0 0 \n",
+      "0 0 0 0 0 1 0 0 0 0 \n",
+      "0 0 0 0 0 1 0 0 0 0 \n",
+      "0 0 0 0 0 1 0 0 0 0 \n",
+      "0 0 0 0 0 1 0 0 0 0 \n",
+      "0 0 0 0 0 1 0 0 0 0 \n"
+     ]
+    }
+   ],
+   "source": [
+    "h, w = map(int, input().split())\n",
+    "n = int(input())\n",
+    "\n",
+    "zeros = [[0] * w for _ in range(h)]\n",
+    "\n",
+    "for i in range(n):\n",
+    "    l, d, x, y = map(int, input().split()) # 하나씩 int형으로 map됨 -> list사용할 필요없음!\n",
+    "    # idea) l만큼 값을 바꿀 것이기 떄문에 길이(l)만큼 하나씩 loop 돌리면서 확장해 나가자!\n",
+    "    for j in range(l):\n",
+    "        # 막대가 가로일 때(열 방향일 때)\n",
+    "        if d == 0:\n",
+    "            zeros[x-1][y-1+j] = 1\n",
+    "        # 막대가 세로일 때(행 방향일 때)\n",
+    "        else:\n",
+    "            zeros[x-1+j][y-1] = 1\n",
+    "\n",
+    "# h, w가 바뀌면 안된다. 왜?=> 세로, 가로 순으로 입력되니깐! 직사각형 격자판일 때 에러발생함!\n",
+    "for i in range(h):\n",
+    "    for j in range(w):\n",
+    "        # i가 행으로, h(세로)에 해당, j가 열으로, w에 해당!\n",
+    "        print(zeros[i][j], end=' ')\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
